--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <script src="script.js"></script>
 </head>
+
 <body>
-    <p id="answer">Answer will display here poof</p>
+    <p>Answer will display there
+        <br> \/
+    </p>
+    <p id="answer">___</p>
+    <button onclick="cal()">Run the function</button>
 </body>
+
 </html>
